fixed result not showing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -29,3 +29,8 @@
     color: #333;
     font-weight: bold;
 }
+
+.block {
+    font-size: 2.5em;
+    color: "#333",
+}
